kubernetes/shipmnt-project-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipmnt-project
  namespace: ${APP_NAMESPACE}
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: shipmnt-project
    component: shipmnt
